--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
     .blue { color: var(--blue); font-weight: 600; }
     .red { color: var(--red); font-weight: 600; }
   </style>
+  <script>
+  window.env = {
+    VITE_API_KEY: "{{VITE_API_KEY}}",
+    VITE_AUTH_DOMAIN: "{{VITE_AUTH_DOMAIN}}",
+    VITE_PROJECT_ID: "{{VITE_PROJECT_ID}}",
+    VITE_STORAGE_BUCKET: "{{VITE_STORAGE_BUCKET}}",
+    VITE_MESSAGING_SENDER_ID: "{{VITE_MESSAGING_SENDER_ID}}",
+    VITE_APP_ID: "{{VITE_APP_ID}}",
+    VITE_MEASUREMENT_ID: "{{VITE_MEASUREMENT_ID}}"
+  };
+</script>
 </head>
 <body>
 
