--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Where Do You Want to Date?</title>
+  <title>Three ways to get dirty</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -169,8 +169,9 @@
     <h1>WYA?</h1>
 
     <div class="buttons">
-      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">In a Le Libido Venue</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Dating on the go</button>
+      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at a Le Libido Venue</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Date on the go</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/archetypes.html'">Just curious? Explore the Erotic Archetypes</button>
     </div>
 
     <div class="caption">
@@ -191,7 +192,7 @@
     <div class="modal-content">
       <span class="close" onclick="document.getElementById('venueModal').style.display='none'">&times;</span>
       <h2>Coming Soon</h2>
-      <p>The first Le Libido venue is almost here. Want early access?</p>
+      <p>The first Le Libido venue is coming soon. Want to be a VIP?</p>
       <form action="mailto:spencer@lelibido.com" method="POST" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
