--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -166,7 +166,7 @@
   <div class="border-wrapper">
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-    <h1>WYA?</h1>
+    <h1>Three ways to get dirty</h1>
 
     <div class="buttons">
       <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at a Le Libido Venue</button>
