--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -310,7 +310,7 @@ html, body {
       <h3><a href="premium/erotic-blueprint_mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe and raise it.</p>
     </div>
-<a href="index.html" class="find-type-button">Find Your Type</a>
+<a href="https://lelibido.com/quiz-new.html" class="find-type-button">Find Your Type</a>
   </div>
     <!-- GREEN ROOM -->
   <div class="green-room">
@@ -367,7 +367,7 @@ html, body {
         <h3><a href="premium/erotic-blueprint_charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
-<a href="index.html" class="find-type-button">Find Your Type</a>  
+<a href="https://lelibido.com/quiz-new.html" class="find-type-button">Find Your Type</a>  
     </div>
   </div>
     <!-- RED ROOM -->
@@ -427,7 +427,7 @@ html, body {
       </div>
 
       <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin: 20px auto 20px;">
-  <a href="index.html" class="find-type-button">Find Your Type</a>
+  <a href="https://lelibido.com/quiz-new.html" class="find-type-button">Find Your Type</a>
 </div>
     </div>
   </div>
