--- a/Profile-anonymous.html
+++ b/Profile-anonymous.html
@@ -189,7 +189,7 @@
   </div>
 
   <div class="section-label">Basic Info</div>
-  <div class="field"><label for="nickname">Nickname</label><input type="text" id="name" placeholder="First & Last Name" /></div>
+  <div class="field"><label for="nickname">Nickname</label><input type="text" id="name" placeholder="Choose your pseudonym" /></div>
   <div class="field"><label for="age">Age</label><select id="age"><option disabled selected>Select your age</option></select></div>
   <div class="field"><label for="height">Height</label><select id="height"><option disabled selected>Select your height</option></select></div>
 
