--- a/dating-app.html
+++ b/dating-app.html
@@ -107,6 +107,8 @@
     <div class="red"></div>
   </div>
 
+<div id="venueList" style="padding: 20px;"></div>
+
   <!-- BOTTOM NAVIGATION -->
   <div class="bottom-nav">
     <div>
