--- a/dating-app.html
+++ b/dating-app.html
@@ -3,15 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Le Libido – Dating App</title>
+  <title>Le Libido – Venues Tab</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- Google Maps API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY_HERE&libraries=places,geometry"></script>
-
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <style>
     :root {
@@ -19,255 +12,102 @@
       --blue: #064D95;
       --green: #06954E;
       --red: #950606;
-      --dark: #0d0d0d;
-      --white: #ffffff;
+      --black: #000;
+      --white: #fff;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: var(--dark);
+      background-color: var(--black);
       color: var(--white);
-      overflow-x: hidden;
     }
 
+    /* Top header */
     .top-bar {
-      background-color: #000;
-      color: var(--white);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 15px;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      background-color: var(--black);
+      padding: 12px 16px;
     }
 
-    .top-bar img.logo { height: 32px; }
-    .top-bar .profile-pic,
-    .top-bar .bell-icon {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
+    .top-bar img {
+      width: 30px;
+      height: 30px;
       object-fit: cover;
     }
 
+    .top-bar .logo {
+      height: 32px;
+      width: auto;
+    }
+
+    /* Full screen content blocks */
+    .color-block {
+      width: 100%;
+      height: 33.33vh;
+    }
+
+    .blue { background-color: var(--blue); }
+    .green { background-color: var(--green); }
+    .red { background-color: var(--red); }
+
+    /* Bottom nav */
     .bottom-nav {
       position: fixed;
       bottom: 0;
-      width: 100%;
-      background-color: #000;
+      left: 0;
+      right: 0;
+      background-color: var(--black);
       display: flex;
       justify-content: space-around;
       align-items: center;
       padding: 10px 0;
       border-top: 1px solid var(--gold);
-      z-index: 1000;
+      z-index: 10;
     }
 
-    .nav-item {
+    .bottom-nav .nav-item {
       color: var(--white);
-      text-align: center;
       font-size: 14px;
     }
 
-    .center-icon {
-      font-size: 20px;
-      background-color: var(--gold);
-      color: #000;
+    .bottom-nav .center-icon {
+      background-color: var(--white);
+      color: var(--black);
+      font-size: 18px;
       padding: 6px 10px;
-      border-radius: 10px;
-    }
-
-    .main-content { padding-bottom: 80px; }
-
-    .dater-card {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      margin: 10px 15px;
-      border: 2px solid var(--gold);
-      border-radius: 10px;
-      background-color: rgba(0, 0, 0, 0.6);
-      cursor: pointer;
-    }
-
-    .dater-card img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 15px;
-    }
-
-    .dater-info {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .dater-info .name { font-weight: bold; font-size: 16px; }
-    .dater-info .bio { font-size: 14px; opacity: 0.8; }
-
-    .blue-bg { background-color: var(--blue); }
-    .green-bg { background-color: var(--green); }
-    .red-bg { background-color: var(--red); }
-
-    .modal {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: rgba(0, 0, 0, 0.95);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-
-    .modal-content {
-      background-color: #111;
-      border: 2px solid var(--gold);
-      padding: 20px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 400px;
-      color: var(--white);
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    .section-title {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-      margin-top: 15px;
+      border-radius: 8px;
     }
   </style>
 </head>
 
 <body>
+
   <!-- Header -->
   <div class="top-bar">
-    <img src="profile.jpg" alt="Profile" class="profile-pic" onclick="openProfile()">
+    <img src="profile.jpg" alt="Profile Pic">
     <img src="golden-le-libido-logo.png" alt="Logo" class="logo">
-    <img src="notification-bell.png" alt="Bell" class="bell-icon" onclick="openNotifications()">
+    <img src="notification-bell.png" alt="Bell Icon">
   </div>
 
-  <!-- Content -->
-  <div class="main-content" id="daters-feed"></div>
+  <!-- Main content area -->
+  <div class="color-block blue"></div>
+  <div class="color-block green"></div>
+  <div class="color-block red"></div>
 
-  <!-- Bottom Navigation -->
+  <!-- Bottom nav -->
   <div class="bottom-nav">
-    <div class="nav-item" onclick="showTab('daters')">Daters</div>
-    <div class="nav-item center-icon" onclick="showTab('chat')">💬</div>
-    <div class="nav-item" onclick="showTab('venues')">Venues</div>
+    <div class="nav-item">Daters</div>
+    <div class="nav-item center-icon">💬</div>
+    <div class="nav-item">Venues</div>
   </div>
 
-  <!-- Modals -->
-  <div id="profileModal" class="modal"><div class="modal-content" id="profileContent"></div></div>
-  <div id="chatModal" class="modal"><div class="modal-content"></div></div>
-  <div id="venueModal" class="modal"><div class="modal-content" id="venueContent"></div></div>
-
-  <!-- MASTER SCRIPT -->
-  <script>
-    // 🔥 FIREBASE CONFIG
-    const firebaseConfig = {
-      apiKey: "YOUR_FIREBASE_API_KEY",
-      authDomain: "YOUR_APP.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_APP.appspot.com",
-      messagingSenderId: "YOUR_MSG_ID",
-      appId: "YOUR_APP_ID"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const checkedInKey = "lelibido_last_checkin";
-    let currentUser = null;
-    let userPosition = null;
-    let placesService;
-
-    // 🔑 LOAD USER FROM FIRESTORE
-    async function loadUser() {
-      const fakeUID = localStorage.getItem("uid") || "user001";
-      const doc = await db.collection("users").doc(fakeUID).get();
-      if (!doc.exists) return window.location.href = "/profile-verified.html";
-
-      currentUser = doc.data();
-      currentUser.uid = fakeUID;
-      currentUser.visibleTo = currentUser.visibleTo || ['verified'];
-      currentUser.topMatches = currentUser.topMatches || [];
-
-      renderDaters();
-      showTab('daters');
-    }
-
-    // 🚀 ON LOAD
-    window.onload = () => loadUser();
-
-    // 🎯 TAB SWITCHING
-    function showTab(tab) {
-      document.getElementById('daters-feed').style.display = tab === 'daters' ? 'block' : 'none';
-      document.getElementById('chatModal').style.display = tab === 'chat' ? 'flex' : 'none';
-      document.getElementById('venueModal').style.display = tab === 'venues' ? 'flex' : 'none';
-    }
-
-    // ❤️ RENDER DATERS
-    function renderDaters() {
-      const feed = document.getElementById('daters-feed');
-      feed.innerHTML = '';
-      db.collection("users").get().then(snapshot => {
-        snapshot.forEach(doc => {
-          const d = doc.data();
-          if (!currentUser.visibleTo.includes(d.mode)) return;
-
-          const medal =
-            currentUser.topMatches[0] === d.uid ? '🥇' :
-            currentUser.topMatches[1] === d.uid ? '🥈' :
-            currentUser.topMatches[2] === d.uid ? '🥉' : '';
-
-          const sugar = d.chocolate ? '🍫' : '';
-          const bg = d.archetypeColor === 'blue' ? 'blue-bg' : d.archetypeColor === 'green' ? 'green-bg' : 'red-bg';
-
-          const card = document.createElement('div');
-          card.className = `dater-card ${bg}`;
-          card.setAttribute("onclick", `openFullProfile('${d.uid}')`);
-          card.innerHTML = `
-            <img src="${d.profilePic}" alt="${d.name}">
-            <div class="dater-info">
-              <div class="name">${medal} ${d.name}, ${d.age} ${sugar}</div>
-              <div class="bio">${d.archetype} – ${d.bio}</div>
-            </div>`;
-          feed.appendChild(card);
-        });
-      });
-    }
-
-    function openFullProfile(uid) {
-      db.collection("users").doc(uid).get().then(doc => {
-        const d = doc.data();
-        const c = document.getElementById("profileContent");
-        c.innerHTML = `
-          <span class="close-btn" onclick="closeModal('profileModal')">×</span>
-          <h2 class="section-title">${d.name}, ${d.age}</h2>
-          <img src="${d.profilePic}" style="width:100px;height:100px;border-radius:50%;margin-bottom:10px;">
-          <p><strong>@${d.username}</strong></p>
-          <p>${d.bio}</p>
-          ${d.chocolate ? '<p>🍫 Open to sugar dynamics</p>' : ''}
-        `;
-        document.getElementById("profileModal").style.display = 'flex';
-      });
-    }
-
-    function closeModal(id) { document.getElementById(id).style.display = 'none'; }
-    function openProfile() { window.location.href = currentUser.mode === 'anonymous' ? 'profile-anonymous.html' : 'profile-verified.html'; }
-    function openNotifications() { alert("Notifications will appear here."); }
-  </script>
 </body>
 </html>
