--- a/dating-app.html
+++ b/dating-app.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Le Libido – Venues Tab</title>
+  <title>Le Libido – Dater Feed Mockup</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
@@ -20,15 +20,15 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
       background-color: var(--black);
       color: var(--white);
+      height: 100%;
     }
 
-    /* Top header */
     .top-bar {
       display: flex;
       justify-content: space-between;
@@ -48,17 +48,26 @@
       width: auto;
     }
 
-    /* Full screen content blocks */
-    .color-block {
+    .main-feed {
+      overflow-y: scroll;
+      height: calc(100vh - 60px); /* bottom nav height */
+      scroll-behavior: smooth;
+    }
+
+    .dater-card {
       width: 100%;
-      height: 33.33vh;
+      min-height: calc((100vh - 60px) / 3); /* Show 3 at a time */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      font-weight: bold;
     }
 
     .blue { background-color: var(--blue); }
     .green { background-color: var(--green); }
     .red { background-color: var(--red); }
 
-    /* Bottom nav */
     .bottom-nav {
       position: fixed;
       bottom: 0;
@@ -97,10 +106,18 @@
     <img src="notification-bell.png" alt="Bell Icon">
   </div>
 
-  <!-- Main content area -->
-  <div class="color-block blue"></div>
-  <div class="color-block green"></div>
-  <div class="color-block red"></div>
+  <!-- Scrollable Feed -->
+  <div class="main-feed" id="mainFeed">
+    <div class="dater-card blue">Blue Archetype</div>
+    <div class="dater-card green">Green Archetype</div>
+    <div class="dater-card red">Red Archetype</div>
+    <div class="dater-card green">Green Archetype</div>
+    <div class="dater-card red">Red Archetype</div>
+    <div class="dater-card blue">Blue Archetype</div>
+    <div class="dater-card red">Red Archetype</div>
+    <div class="dater-card green">Green Archetype</div>
+    <div class="dater-card blue">Blue Archetype</div>
+  </div>
 
   <!-- Bottom nav -->
   <div class="bottom-nav">
